@@ -6,17 +6,17 @@ set getCoptions = $JLAB_ROOT/$JLAB_VERSION/install/get_coptions
 
 # Options, Screen Log, Warnings
 set name     = banks
-set release  = `./get_coptions release`
-set repo     = `./get_coptions repo`/banks
+set release  = `$getCoptions release`
+set repo     = `$getCoptions repo`/banks
 set version  = $BANKS_VERSION
 set filename = banks_$BANKS_VERSION".tar.gz"
-set arch     = `./get_coptions arch`
-set opt      = `./get_coptions copt`
-set blog     = `./get_coptions logFile banks`
-set blogS    = `./get_coptions logFileS banks`
+set arch     = `$getCoptions arch`
+set opt      = `$getCoptions copt`
+set blog     = `$getCoptions logFile banks`
+set blogS    = `$getCoptions logFileS banks`
 
 # Write options on screen
-./get_coptions log $name $version $filename $release $arch $opt
+$getCoptions log $name $version $filename $release $arch $opt
 
 if($1 == "src"|| $1 == "make") goto $1
 
