@@ -11,17 +11,17 @@ set getCoptions = $JLAB_ROOT/$JLAB_VERSION/install/get_coptions
 
 # Options, Screen Log, Warnings
 set name     = ccdb
-set release  = `./get_coptions release`
-set repo     = `./get_coptions repo`/ccdb
+set release  = `$getCoptions release`
+set repo     = `$getCoptions repo`/ccdb
 set version  = $CCDB_VERSION
 set filename =  ccdb"-"$CCDB_VERSION".tar.gz"
-set arch     = `./get_coptions arch`
-set opt      = `./get_coptions copt`
-set blog     = `./get_coptions logFile ccdb`
-set blogS    = `./get_coptions logFileS ccdb`
+set arch     = `$getCoptions arch`
+set opt      = `$getCoptions copt`
+set blog     = `$getCoptions logFile ccdb`
+set blogS    = `$getCoptions logFileS ccdb`
 
 # Write options on screen
-./get_coptions log $name $version $filename $release $arch $opt
+$getCoptions log $name $version $filename $release $arch $opt
 
 if($1 == "src"|| $1 == "make") goto $1
 
