@@ -17,17 +17,17 @@ set getCoptions = $JLAB_ROOT/$JLAB_VERSION/install/get_coptions
 # Options
 # not putting geant4 on the repo script because of the data path
 set name     = geant4
-set release  = `./get_coptions release`
-set repo     = `./get_coptions repo`
+set release  = `$getCoptions release`
+set repo     = `$getCoptions repo`
 set version  = $GEANT4_VERSION
 set filename = geant$GEANT4_VERSION".tar.gz"
-set arch     = `./get_coptions arch`
-set opt      = `./get_coptions copt`
-set blog     = `./get_coptions logFile geant4`
-set blogS    = `./get_coptions logFileS geant4`
+set arch     = `$getCoptions arch`
+set opt      = `$getCoptions copt`
+set blog     = `$getCoptions logFile geant4`
+set blogS    = `$getCoptions logFileS geant4`
 
 # Write options on screen
-./get_coptions log $name $version $filename $release $arch $opt
+$getCoptions log $name $version $filename $release $arch $opt
 
 # By default data is set to off
 # Getting data from jlab repository
