@@ -6,17 +6,17 @@ set getCoptions = $JLAB_ROOT/$JLAB_VERSION/install/get_coptions
 
 # Options, Screen Log, Warnings
 set name     = gemc
-set release  = `./get_coptions release`
-set repo     = `./get_coptions repo`/gemc
+set release  = `$getCoptions release`
+set repo     = `$getCoptions repo`/gemc
 set version  = $GEMC_VERSION
 set filename =  gemc"-"$GEMC_VERSION".tar.gz"
-set arch     = `./get_coptions arch`
-set opt      = `./get_coptions copt`
-set blog     = `./get_coptions logFile gemc`
-set blogS    = `./get_coptions logFileS gemc`
+set arch     = `$getCoptions arch`
+set opt      = `$getCoptions copt`
+set blog     = `$getCoptions logFile gemc`
+set blogS    = `$getCoptions logFileS gemc`
 
 # Write options on screen
-./get_coptions log $name $version $filename $release $arch $opt
+$getCoptions log $name $version $filename $release $arch $opt
 
 if($1 == "src"|| $1 == "make") goto $1
 
