@@ -1,7 +1,7 @@
 #!/bin/csh -f
 
 # Options
-set arch     = `./get_coptions arch`
+set arch     = `$getCoptions arch`
 
 # Linking mysql distributions from OS release
 # These need to be pre-installed
