@@ -5,20 +5,21 @@
 
 # Additional settings at the top of get_coptions
 source get_coptions env
+set getCoptions = $JLAB_ROOT/$JLAB_VERSION/install/get_coptions
 
 # Options
 set name     = xercesc
-set release  = `./get_coptions release`
-set repo     = `./get_coptions repo`/xercesc
+set release  = `$getCoptions release`
+set repo     = `$getCoptions repo`/xercesc
 set version  = $XERCESC_VERSION
 set filename = xerces-c-$XERCESC_VERSION".tar.gz"
-set arch     = `./get_coptions arch`
-set opt      = `./get_coptions copt`
-set blog     = `./get_coptions logFile xercesc`
-set blogS    = `./get_coptions logFileS xercesc`
+set arch     = `$getCoptions arch`
+set opt      = `$getCoptions copt`
+set blog     = `$getCoptions logFile xercesc`
+set blogS    = `$getCoptions logFileS xercesc`
 
 # Write options on screen
-./get_coptions log $name $version $filename $release $arch $opt
+$getCoptions log $name $version $filename $release $arch $opt
 
 if($1 == "src"|| $1 == "make") goto $1
 
