@@ -8,6 +8,7 @@
 - better step-by-step instruction formatting
 - added qc option to wget: quiet and do not retrieve if file exists already (avoids writing duplicates)
 - added doc for default system installation of qt
+- using $getCoptions throughout the installation scripts
 
 8/28/18
 - qt system is now the default mode. DEFAULT_QT_VERSION is set to system, and go_qt checks QT_SYSTEM
